--- a/nerdlets/slo-r-entity/nrds.scss
+++ b/nerdlets/slo-r-entity/nrds.scss
@@ -130,7 +130,7 @@ button[class*="Dropdown-trigger"],
 [class*="Checkbox-input"] {
   border-color: #d5d7d7;
   box-shadow: 0 1px 0 #f4f5f5;
-  background-color: #fff;
+  // SK - 11-17-21 - hides the check mark -- // background-color: #fff;
 
   &:focus {
     border-color: #007e8a;
@@ -139,7 +139,7 @@ button[class*="Dropdown-trigger"],
 
   &:hover {
     border-color: #8e9494;
-    background-color: #fff;
+    // SK - 11-17-21 - hides the check mark -- // background-color: #fff;
     cursor: pointer;
     box-shadow: 0 1px 0 #edeeee;
   }
